[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4.0.0"
reqwest = "0.11.11"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] } # not from book, but trying to get running on new OS
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.17"
tracing = {version = "0.1", features = ["log"]}
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6.0"
serde-aux = "3.1.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
	 "runtime-actix-rustls",
	 "macros",
	 "postgres",
	 "uuid",
	 "chrono",
	 "migrate",
         "offline"   
]	 
